Scrollbar: fix style

--- a/packages/theme-default/src/date-picker/time-spinner.css
+++ b/packages/theme-default/src/date-picker/time-spinner.css
@@ -5,6 +5,10 @@
     &.has-seconds {
       .el-time-spinner__wrapper {
         width: 33%;
+
+        .el-scrollbar__wrap:not(.el-scrollbar__wrap--hidden-default) {
+          padding-bottom: 15px;
+        }
       }
 
       .el-time-spinner__wrapper:nth-child(2) {
